fixed spacing between h3 and p elements.

--- a/css-three-column-layout/styles.css
+++ b/css-three-column-layout/styles.css
@@ -60,9 +60,14 @@ img {
 }
 
 p {
+  margin-top: 0;
   padding-left: 15px;
   padding-right: 15px;
   font-size: 14px;
+}
+
+h3 {
+  margin-bottom: 15px;
 }
 
 .padding-leftright {
